provider/scss/custom/_style.scss
/* ... */
.footnotes {
  font-family: $font-serif;
  font-size: 12px;
  padding: 0 25px;

  @media screen and (max-width: 600px) {
    padding: 0;
  }

  a[href^="#fnref"] {
    font-size: 1em;
    margin-left: 5px;
  }

  p {
    line-height: 20px;

    @media screen and (max-width: 600px) {
      line-height: 18px;
    }
  }

  li { margin-bottom: 5px; }
  li p:last-child { margin-bottom: 0; }

  hr {
    padding: 0;
    text-align: center;
    width: 100%;
    background-color: #eee;
    margin: 30px auto 20px;

    &:after {
      content: "\00A7";
      cursor: default;
      display: inline-block;
      position: relative;
      font-size: 2em;
      padding: 0 0.25em;
      background: white;
      top: -0.75em;
    }
  }
}


hr {
  background-color: #cccccc;
  border: 0;
  height: 2px;
  color: #cccccc;
  margin: 35px auto;
  width: 50%;
  clear: both;
}

#main-nav > ul > li > a {
  padding: 31px 0 35px 0;
  text-transform: uppercase;
  font-size: 14px;

  &::after { padding-left: 0; }

	@media screen and (max-width: 766px){
    padding: 16px 0;
  }
}

#comment {
  padding-top: 15px;
  margin-top: 5px;
  border-top: 5px solid #8ccaff;
  clear: both;
}

#content {
  article {
    padding: 0 0 15px 0;
  }
}

.highlighter {
  background-color: #ffc;
}

.post {
  .meta {
    clear: both;
    position: static;
    width: auto;
    font-family: $font-serif;

    // TODO: move this to post.scss
    .date, .tags, .commit, .notes {
      display: inline-block;
      margin-right: 30px;
    }

    @media not screen and (max-width: 600px), not screen and (max-width: 766px) {
      .entry-content a:hover {
        color: #258FB8;
        text-decoration: underline;
      }
    }
  }
}

figure.code {
  margin: 15px 0;
  cursor: default;
  background: #F2F9FF;

  @media screen and (max-width: 600px) {
    padding: 5px;
  }

  figcaption {
    @media screen and (max-width: 600px) {
      display: none;
    }

    background-color: #8ccaff;
    padding: 5px 10px;
    position: relative;
    font-size: 87.5%;
    color: #00427b;

    abbr {
      border-bottom: 1px dotted #00427B;

      @media not screen and (max-width: 600px), not screen and (max-width: 766px) {
        &:hover { border-bottom: 1px solid #00427B; }
      }
    }

    span {
      background: none;
      padding: 0;
      margin: 0;
      font-weight: bold;
      display: block;

      &:empty{
        display: none;
      }

      a, a:visited {
        position: absolute;
        top: 5px;
        right: 28px; // 15px;
        color: #00427B;
        font-weight: bold;
      }
    }
  }

  .code-container {
    overflow-x: auto;
    background: #F2F9FF;
    font-size: 0.875em;
  }

  .highlight {
    background: none;
    line-height: 18px;
    margin: 0;
    border: 0;

    @media not screen and (max-width: 600px) {
      padding: 10px;
    }

    .code, .gutter { line-height: 18px; }
  }
}

.entry-content code,
.entry-content pre {
  font-family: $font-mono;
}

.entry-content > pre {
  background-color: #f2f9ff;
  color: #00427b;
  padding-left: 10px;
  margin-top: 10px;
  margin-left: -10px;
  margin-right: -10px;
}

.page h1.title {
  margin-bottom: 15px;
  margin-top: 5px;
  font-family: $font-serif;
  font-weight: 400;
}
/* ... */

